# vimputti

./: Cargo.toml  Containerfile  LICENSE  Makefile  README.md
examples/: controller_templates.rs  create_test_device.rs  rumble_feedback.rs  simple_controller.rs  test_shim.c  test_udev.rs
src/: lib.rs  main.rs  manager.rs  protocol.rs  shim.rs  uinput.rs
src/client/: batch.rs  device.rs  mod.rs
src/manager/: device.rs  lock.rs  mod.rs  netlink.rs  sysfs.rs  udev.rs  uinput.rs
src/templates/: mod.rs
vimputti-launcher/: Cargo.toml
vimputti-launcher/src/: handler.rs  ioctl_handler.rs  main.rs  path_redirect.rs  ptrace_util.rs  seccomp.rs  socket_handler.rs  stat_handler.rs  state.rs  udev_forwarder.rs
vimputti-manager/: Cargo.toml
vimputti-manager/src/: main.rs
vimputti-shim/: Cargo.toml
vimputti-shim/src/: lib.rs  libudev.rs  path_redirect.rs  syscalls.rs
