[package]
name = "vimputti-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
vimputti = { path = ".." }
libc = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
nix = { version = "0.30", features = ["process", "signal", "ptrace", "ioctl", "socket", "uio"] }
lazy_static = "1.5"
