[package]
name = "vimputti-manager"
edition = "2024"

[[bin]]
name = "vimputti-manager"
path = "src/main.rs"

[dependencies]
vimputti = { path = ".." }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
