[package]
name = "vimputti-shim"
edition = "2024"

[lib]
name = "vimputti_shim"
crate-type = ["cdylib"]

[dependencies]
vimputti = { path = ".." }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
lazy_static = "1.5"
ctor = "0.6"
parking_lot = "0.12"
